--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.0",
+    "formik": "^2.4.6",
     "mobx": "^6.8.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
@@ -23,7 +25,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@types/react-datepicker": "^7.2.0",
+    "@types/uuid": "^9.0.0",
+    "@types/yup": "^0.32.0"
   }
 }
