16 adding the cloudary for upplod pictures, and also added cloudary interface

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName" : "ds7zw9e5q",
+    "ApiKey" : "494479258599552",
+    "ApiSecret" : "g7AaTYuil60ux9ihMpjoX0Oo00w"
+  }
 }
