--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.0",
     "formik": "^2.4.6",
@@ -16,8 +17,9 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
-    "react-datepicker": "^7.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
@@ -53,7 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^7.2.0",
+    "@types/react-datepicker": "^4.19.6",
     "@types/uuid": "^9.0.0",
     "@types/yup": "^0.32.0"
   }
