--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroll": "^0.1.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
