--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
@@ -24,7 +23,6 @@
     "react-dropzone": "^14.2.3",
     "react-infinite-scroll": "^0.1.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
@@ -34,10 +32,11 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -58,8 +57,14 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^18.19.55",
     "@types/react-datepicker": "^4.19.6",
     "@types/uuid": "^9.0.0",
-    "@types/yup": "^0.32.0"
+    "@types/yup": "^0.32.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "vite": "^5.4.9"
   }
 }
